--- a/library-front-react/src/pages/login/index.module.css
+++ b/library-front-react/src/pages/login/index.module.css
@@ -5,3 +5,9 @@
     justify-content: center;
     align-items: center;
 }
+
+.title {
+    font-size: 32px;
+    text-align: center;
+    margin-bottom: 12px;
+}
